Deleted trailing messages
The only messages that are uploaded to the database now are the ones that have all the past messages, so you can see the whole thread, if it's the only message then it will still upload it.

--- a/notebooks/PiperMail.ipynb
+++ b/notebooks/PiperMail.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -40,15 +40,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['issue_response_time']\n",
-      "Created Table\n"
+      "['issue_response_time', 'mail_lists', 'mailing_list_jobs']\n",
+      "          project\n",
+      "0      aalldp-dev\n",
+      "1  archetypes-dev\n"
      ]
     }
    ],
@@ -75,128 +77,274 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def write_message(file,repo,type_archive,mail_check,pos,time=None):\n",
+    "    thread = None\n",
+    "    store = None\n",
+    "    for message in repo.fetch(from_date=time):\n",
+    "        #print(message,\"\\n\\n\\n\\n\\n\\n\\n\\n\")\n",
+    "        #print(message['data']['Message-ID'])\n",
+    "        if(type_archive == 'not_new'):\n",
+    "            mess_check = Piper.convert_date(message['data']['Date'])\n",
+    "            #mess_check = Piper.convert_date(\"Thu, 24 Mar 2019 20:37:11 +0000\")\n",
+    "            #print(time)\n",
+    "        if(type_archive == 'not_new' and mess_check <= time ):\n",
+    "            print(\"Right here\")\n",
+    "            continue            \n",
+    "        elif(type_archive == 'not_new' and mess_check > time):\n",
+    "            print(\"sigh\")\n",
+    "            mess_check = Piper.convert_date(message['data']['Date'])\n",
+    "            mail_check[pos] = 'update'\n",
+    "            \n",
+    "        ID = message['data']['Message-ID']\n",
+    "        try:\n",
+    "            message['data']['References']\n",
+    "            '''if(message['data']['Message-ID'] == '<CAFHD1sO814do11F9cKVZgr5fo+dw5q-VmfrYO_Q9vv6kXe8NjA@mail.gmail.com>'):\n",
+    "                print(thread)\n",
+    "                print(store)'''                             \n",
+    "            if((not thread == None) and (thread['data']['Message-ID'] not in message['data']['References'])):\n",
+    "                obj = json.dumps(thread, indent=4, sort_keys=True)\n",
+    "                outfile.write(obj)\n",
+    "                outfile.write('\\n')\n",
+    "                store = None\n",
+    "                print(\"why\")\n",
+    "            elif( (not store == None) and (store['data']['Message-ID'] not in message['data']['References'])):\n",
+    "                #print(message['data']['References'])\n",
+    "                obj = json.dumps(store, indent=4, sort_keys=True)\n",
+    "                outfile.write(obj)\n",
+    "                outfile.write('\\n')\n",
+    "                store = None\n",
+    "                print(\"yep\")\n",
+    "            thread = message\n",
+    "        except:\n",
+    "            #print(\"got'em\")\n",
+    "            if(not thread == None):\n",
+    "                obj = json.dumps(thread, indent=4, sort_keys=True)\n",
+    "                outfile.write(obj)\n",
+    "                outfile.write('\\n')\n",
+    "                thread = None\n",
+    "                print(\"got-em\")\n",
+    "            elif(not store == None):\n",
+    "                obj = json.dumps(store, indent=4, sort_keys=True)\n",
+    "                outfile.write(obj)\n",
+    "                outfile.write('\\n')\n",
+    "                store = None\n",
+    "                print(\"getting\")                                \n",
+    "            store = message\n",
+    "        #print(\"!\"*50,\"NEW MESSAGE\",\"!\"*50)\n",
+    "    if( (thread == None) and (store == None)):\n",
+    "        good = 1\n",
+    "    elif( (thread == None) and (not store == None) ):\n",
+    "        obj = json.dumps(store, indent=4, sort_keys=True)\n",
+    "        outfile.write(obj)\n",
+    "        outfile.write('\\n')\n",
+    "    elif( (store == None) and (not thread == None)):\n",
+    "        obj = json.dumps(thread, indent=4, sort_keys=True)\n",
+    "        outfile.write(obj)\n",
+    "        outfile.write('\\n')\n",
+    "    elif(store['data']['Message-ID'] in thread['data']['References']):\n",
+    "        obj = json.dumps(thread, indent=4, sort_keys=True)\n",
+    "        outfile.write(obj)\n",
+    "        outfile.write('\\n')\n",
+    "    else:\n",
+    "        obj = json.dumps(store, indent=4, sort_keys=True)\n",
+    "        outfile.write(obj)\n",
+    "        outfile.write('\\n')  \n",
+    "    outfile.close()\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2018-06-21 15:10:43 keanu-Inspiron-5567 perceval.backends.core.pipermail[21549] INFO Looking for messages from 'https://lists.opendaylight.org/pipermail/aalldp-dev/' since 1970-01-01 00:00:00+00:00\n",
-      "2018-06-21 15:10:43 keanu-Inspiron-5567 perceval.backends.core.pipermail[21549] INFO Downloading mboxes from 'https://lists.opendaylight.org/pipermail/aalldp-dev/' to since 1970-01-01 00:00:00+00:00\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/keanu/temp/augur_push/augur4/augur/notebooks\n",
-      "_NamespacePath(['/home/keanu/anaconda3/envs/augur/lib/python3.6/site-packages/perceval'])\n",
-      "/home/keanu/temp/augur_push/augur4/augur/notebooks\n",
-      "{'aalldp-dev': False, 'archetypes-dev': False}\n"
+      "runtime/mailing_lists.csv Place\n",
+      "yeah\n",
+      "Link,mail_list\n",
+      "\n",
+      "https://lists.opendaylight.org/pipermail/,\"aalldp-dev\"\n",
+      "\n",
+      "['aalldp-dev', 'archetypes-dev', 'announce'] mail_list\n",
+      "{'aalldp-dev': False, 'archetypes-dev': False, 'announce': False}\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2018-06-21 15:10:45 keanu-Inspiron-5567 perceval.backends.core.pipermail[21549] INFO 1/1 MBoxes downloaded\n",
-      "2018-06-21 15:10:45 keanu-Inspiron-5567 perceval.backends.core.mbox[21549] INFO Done. 2/2 messages fetched; 0 ignored\n",
-      "2018-06-21 15:10:45 keanu-Inspiron-5567 perceval.backends.core.pipermail[21549] INFO Fetch process completed\n",
-      "2018-06-21 15:10:45 keanu-Inspiron-5567 perceval.backends.core.pipermail[21549] INFO Looking for messages from 'https://lists.opendaylight.org/pipermail/archetypes-dev/' since 1970-01-01 00:00:00+00:00\n",
-      "2018-06-21 15:10:45 keanu-Inspiron-5567 perceval.backends.core.pipermail[21549] INFO Downloading mboxes from 'https://lists.opendaylight.org/pipermail/archetypes-dev/' to since 1970-01-01 00:00:00+00:00\n"
+      "2018-07-02 09:55:54 keanu-Inspiron-5567 perceval.backends.core.pipermail[5251] INFO Looking for messages from 'https://lists.opendaylight.org/pipermail/aalldp-dev/' since 2016-03-24 20:37:11\n",
+      "2018-07-02 09:55:54 keanu-Inspiron-5567 perceval.backends.core.pipermail[5251] INFO Downloading mboxes from 'https://lists.opendaylight.org/pipermail/aalldp-dev/' to since 2016-03-24 20:37:11\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created File aalldp-dev\n"
+      "<class 'pandas._libs.tslib.Timestamp'>\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2018-06-21 15:10:47 keanu-Inspiron-5567 perceval.backends.core.pipermail[21549] INFO 1/1 MBoxes downloaded\n",
-      "2018-06-21 15:10:47 keanu-Inspiron-5567 perceval.backends.core.mbox[21549] INFO Done. 2/2 messages fetched; 0 ignored\n",
-      "2018-06-21 15:10:47 keanu-Inspiron-5567 perceval.backends.core.pipermail[21549] INFO Fetch process completed\n"
+      "2018-07-02 09:55:56 keanu-Inspiron-5567 perceval.backends.core.pipermail[5251] INFO 1/1 MBoxes downloaded\n",
+      "2018-07-02 09:55:56 keanu-Inspiron-5567 perceval.backends.core.mbox[5251] INFO Done. 1/1 messages fetched; 0 ignored\n",
+      "2018-07-02 09:55:56 keanu-Inspiron-5567 perceval.backends.core.pipermail[5251] INFO Fetch process completed\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created File archetypes-dev\n",
-      "{'aalldp-dev': 'new', 'archetypes-dev': 'new'}\n",
+      "sigh\n",
+      "Checking to see for updated messages\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2018-07-02 09:55:58 keanu-Inspiron-5567 perceval.backends.core.pipermail[5251] INFO Looking for messages from 'https://lists.opendaylight.org/pipermail/archetypes-dev/' since 2018-04-18 09:11:16\n",
+      "2018-07-02 09:55:58 keanu-Inspiron-5567 perceval.backends.core.pipermail[5251] INFO Downloading mboxes from 'https://lists.opendaylight.org/pipermail/archetypes-dev/' to since 2018-04-18 09:11:16\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas._libs.tslib.Timestamp'>\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2018-07-02 09:56:00 keanu-Inspiron-5567 perceval.backends.core.pipermail[5251] INFO 1/1 MBoxes downloaded\n",
+      "2018-07-02 09:56:00 keanu-Inspiron-5567 perceval.backends.core.mbox[5251] INFO Done. 1/1 messages fetched; 0 ignored\n",
+      "2018-07-02 09:56:00 keanu-Inspiron-5567 perceval.backends.core.pipermail[5251] INFO Fetch process completed\n",
+      "2018-07-02 09:56:00 keanu-Inspiron-5567 perceval.backends.core.pipermail[5251] INFO Looking for messages from 'https://lists.opendaylight.org/pipermail/announce/' since 1970-01-01 00:00:00+00:00\n",
+      "2018-07-02 09:56:00 keanu-Inspiron-5567 perceval.backends.core.pipermail[5251] INFO Downloading mboxes from 'https://lists.opendaylight.org/pipermail/announce/' to since 1970-01-01 00:00:00+00:00\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sigh\n",
+      "Checking to see for updated messages\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2018-07-02 09:56:07 keanu-Inspiron-5567 perceval.backends.core.pipermail[5251] INFO 7/7 MBoxes downloaded\n",
+      "2018-07-02 09:56:07 keanu-Inspiron-5567 perceval.backends.core.mbox[5251] INFO Done. 12/12 messages fetched; 0 ignored\n",
+      "2018-07-02 09:56:07 keanu-Inspiron-5567 perceval.backends.core.pipermail[5251] INFO Fetch process completed\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "got-em\n",
+      "why\n",
+      "got-em\n",
+      "getting\n",
+      "getting\n",
+      "getting\n",
+      "getting\n",
+      "getting\n",
+      "Created File announce\n",
+      "{'aalldp-dev': 'update', 'archetypes-dev': 'update', 'announce': 'new'}\n",
       "Finished downloading files\n"
      ]
     }
    ],
    "source": [
     "# create an Augur application so we can test our function\n",
-    "Piper = augurApp.piper()\n",
-    "print(os.getcwd())\n",
-    "print(perceval.__path__)\n",
-    "print(os.getcwd())\n",
-    "link = \"https://lists.opendaylight.org/pipermail/\"\n",
-    "#mail = [\"aalldp-dev\",\"alto-dev\",\"archetypes-dev\"]\n",
-    "#mail = [\"aalldp-dev\",\"alto-dev\",\"archetypes-dev\",\"dev\"]\n",
-    "#mail = [\"aalldp-dev\",\"archetypes-dev\",\"alto-dev\"]\n",
-    "mail = [\"aalldp-dev\",\"archetypes-dev\"]\n",
-    "mail_check = {key:False for key in mail}\n",
-    "print(mail_check)\n",
-    "#print(os.getcwd())\n",
-    "file = \"opendaylight-\"\n",
     "if \"notebooks\" in os.getcwd():\n",
     "    os.chdir(\"..\")\n",
-    "path = \"/augur/data/opendaylight-\" \n",
-    "for x in range(len(mail)):\n",
-    "    #print(link+mail[x])\n",
-    "    if(mail[x] not in df1['project'].values ):\n",
-    "        #print(os.getcwd())\n",
-    "        #print(os.path.join(os.getcwd() + path+'.json'))\n",
-    "        place = os.path.join(os.getcwd() + path + mail[x] +'.json')           \n",
-    "        repo = Pipermail(url = \"https://lists.opendaylight.org/pipermail/\"+ mail[x] + \"/\",dirpath=\"tmp/archives_\"+mail[x])\n",
-    "        #print(repo)\n",
-    "        outfile = open(place,\"w+\")\n",
-    "        for message in repo.fetch():\n",
-    "            obj = json.dumps(message, indent=4, sort_keys=True)\n",
-    "            outfile.write(obj)\n",
-    "            outfile.write('\\n')\n",
-    "        outfile.close()\n",
-    "        mail_check[mail[x]] = 'new'\n",
-    "        print(\"Created File\",mail[x])\n",
-    "    else:\n",
-    "        last_updatedSQL = s.sql.text(\"\"\"SELECT last_message_date FROM \n",
-    "        mailing_list_jobs WHERE project = \"\"\" +  \"'\" + mail[x] + \"'\")\n",
-    "        last_updated_df = pd.read_sql(last_updatedSQL, connect.db)\n",
-    "        time = (last_updated_df['last_message_date'])  \n",
-    "        time = time.astype(object)\n",
-    "        place = os.path.join(os.getcwd() + path + 'temp_' + mail[x] +'.json')       \n",
-    "        repo = Pipermail(url = \"https://lists.opendaylight.org/pipermail/\"+ mail[x] + \"/\",dirpath=\"tmp/archives_\"+mail[x])\n",
-    "        outfile = open(place,\"w+\")\n",
-    "        print(type(time[0]))\n",
-    "        for message in repo.fetch(from_date=time[0]):\n",
-    "            mess_check = Piper.convert_date(message['data']['Date'])\n",
-    "            #mess_check = Piper.convert_date(\"Thu, 24 Mar 2019 20:37:11 +0000\")\n",
-    "            if (mess_check > time[0]):\n",
-    "                obj = json.dumps(message, indent=4, sort_keys=True)\n",
-    "                outfile.write(obj)\n",
-    "                outfile.write('\\n')\n",
-    "                print(\"Updated messages downloaded\")\n",
-    "                mail_check[mail[x]] = 'update'\n",
-    "        outfile.close()\n",
-    "        print(\"Checking to see for updated messages\")\n",
-    "print(mail_check)\n",
-    "print(\"Finished downloading files\")"
+    "Piper, path= augurApp.piper()\n",
+    "print(path,\"Place\")\n",
+    "if(not os.path.exists(path)):\n",
+    "    file = open(path, \"w+\")\n",
+    "else:\n",
+    "    file = open(path, \"r\")\n",
+    "    print(\"yeah\")\n",
+    "if (os.stat(path).st_size == 0):\n",
+    "    file.write(\"Link,mail_list\")\n",
+    "    print(\"Please enter the mailing lists and the links for them please\")\n",
+    "    file.close()\n",
+    "else:\n",
+    "    count = 0\n",
+    "    for line in file:\n",
+    "        print(line)\n",
+    "        count+=1\n",
+    "        if(count == 2):\n",
+    "            break\n",
+    "    if(count == 1):\n",
+    "        file.close()\n",
+    "        print(\"Nothing in file\")\n",
+    "    if(count == 2):\n",
+    "        #print(pd.read_csv(path))\n",
+    "        df = pd.read_csv(path)\n",
+    "        groups = df.groupby('Link').groups\n",
+    "        for group in groups:\n",
+    "            link = group\n",
+    "            mail_list = (df.loc[df['Link'] == group]['mail_list']).tolist()\n",
+    "            print(mail_list,\"mail_list\")            \n",
+    "            #link = \"https://lists.opendaylight.org/pipermail/\"\n",
+    "            #mail = [\"aalldp-dev\",\"alto-dev\",\"archetypes-dev\"]\n",
+    "            #mail = [\"aalldp-dev\",\"alto-dev\",\"archetypes-dev\",\"dev\"]\n",
+    "            #mail = [\"aalldp-dev\",\"archetypes-dev\",\"alto-dev\"]\n",
+    "            #mail = [\"aalldp-dev\",\"archetypes-dev\"]\n",
+    "            mail_check = {key:False for key in mail_list}\n",
+    "            print(mail_check)\n",
+    "            #print(os.getcwd())\n",
+    "            file = \"opendaylight-\"\n",
+    "            path = \"/augur/data/opendaylight-\" \n",
+    "            for x in range(len(mail_list)):\n",
+    "                #print(link+mail[x])\n",
+    "                if(mail_list[x] not in df1['project'].values ):\n",
+    "                    mail_check[mail_list[x]] = 'new'\n",
+    "                    #print(os.getcwd())\n",
+    "                    #print(os.path.join(os.getcwd() + path+'.json'))\n",
+    "                    place = os.path.join(os.getcwd() + path + mail_list[x] +'.json')           \n",
+    "                    repo = Pipermail(url = \"https://lists.opendaylight.org/pipermail/\"+ mail_list[x] + \"/\",dirpath=\"tmp/archives_\"+mail_list[x])\n",
+    "                    #print(repo)\n",
+    "                    outfile = open(place,\"w+\")\n",
+    "                    write_message(outfile,repo,'new',mail_check,mail_list[x])\n",
+    "                    print(\"Created File\",mail_list[x])\n",
+    "                else:\n",
+    "                    last_updatedSQL = s.sql.text(\"\"\"SELECT last_message_date FROM \n",
+    "                    mailing_list_jobs WHERE project = \"\"\" +  \"'\" + mail_list[x] + \"'\")\n",
+    "                    last_updated_df = pd.read_sql(last_updatedSQL, connect.db)\n",
+    "                    time = (last_updated_df['last_message_date'])  \n",
+    "                    time = time.astype(object)\n",
+    "                    place = os.path.join(os.getcwd() + path + 'temp_' + mail_list[x] +'.json')       \n",
+    "                    repo = Pipermail(url = \"https://lists.opendaylight.org/pipermail/\"+ mail_list[x] + \"/\",dirpath=\"tmp/archives_\"+mail_list[x])\n",
+    "                    outfile = open(place,\"w+\")\n",
+    "                    print(type(time[0]))\n",
+    "                    write_message(outfile,repo,'not_new',mail_check,mail_list[x],time[0])\n",
+    "                    print(\"Checking to see for updated messages\")\n",
+    "            print(mail_check)\n",
+    "            print(\"Finished downloading files\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -205,18 +353,48 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "['aalldp-dev', 'archetypes-dev']\n",
       "Okay\n",
       "Engine(mysql+pymysql://derek:***@ghdata.sociallycompute.io:3306/chaoss)\n",
-      "{'aalldp-dev': False, 'archetypes-dev': False}\n",
+      "{'aalldp-dev': 'new', 'archetypes-dev': 'new'}\n",
       "Hey\n",
-      "Skipping\n",
-      "Skipping\n",
+      "['aalldp-dev', 'archetypes-dev']\n",
+      "2016-03-24 20:37:11\n",
+      "File uploaded  3\n",
+      "['aalldp-dev', 'archetypes-dev']\n",
+      "2018-04-18 09:11:16\n",
+      "File uploaded  3\n",
+      "Mailing List Job uploaded\n",
       "Finished\n"
      ]
     }
    ],
    "source": [
-    "Piper.make(connect.db,mail_check,mail,mail_lists)"
+    "print(mail_list)\n",
+    "Piper.make(connect.db,mail_check,mail_list,mail_lists)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Here']\n",
+      "['Far']\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fun(a):\n",
+    "    a[0] = \"Far\"\n",
+    "a = [\"Here\"]\n",
+    "print(a)\n",
+    "fun(a)\n",
+    "print(a)"
    ]
   }
  ],
